# attune

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  memory-eval.yml
deploy/: Dockerfile  compose.yml  mem0-compose.yml
deploy/channel-broker/: Dockerfile
deploy/export-download/: Dockerfile
deploy/gcp/data/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/gcp/edge/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/gcp/foundation/: README.md  iam.tf  main.tf
deploy/gcp/runtime/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/google-chat-ingress/: Dockerfile
deploy/oauth-callback/: Dockerfile  app.py  requirements.in
deploy/republisher/: Dockerfile  main.py  requirements.txt  test_main.py
deploy/secret-broker/: Dockerfile
deploy/slack-ingress/: Dockerfile
docs/: audit-writer.md  capability-gateway.md  configuration.md  current-state.md  customer-export.md  data-lifecycle.md  decisions.md  deployment.md  design.md  dispatch-broker.md  future-state.md  gap-analysis.md  getting-started.md  hosted-channel-installation.md  hosted-channels.md  hosted-conversation.md  hosted-gcp.md  hosted-model-profiles.md  hosted-policy.md  identity-platform.md  mcp-contract.md  modes.md  oauth-transaction.md  reconciliation.md  roadmap.md  secret-broker.md  security-architecture.md  security-review.md  user-journey.md
docs/build-prompts/: 01-apply-node.md  02-edit-flow.md  03-pending-approvals.md  04-conversation-context.md  05-scheduler.md  06-loop-supervision.md  07-brief-v2.md  08-cli.md  09-polling-mode.md  10-compose-quickstart.md  11-memory-commands.md  12-autonomy-graduation.md  13-consolidation-evals.md  14-memory-informed-triage.md  15-quiet-thread-nudges.md  16-calendar-actions-design.md  17-principal-allowlist.md  19-live-policy-rungs.md  README.md
docs/install/: google-workspace-oauth.md  hosted-operator.md  self-hosted.md  slack-app.md
scripts/: test.sh
src/attune/: __init__.py  __main__.py  app.py  brief.py  conversation.py  credentials.py  dispatcher.py  llm.py  logging_setup.py  runtime.py  scheduler.py
src/attune/audit/: __init__.py
src/attune/channels/: __init__.py  blocks.py  gchat.py  gchat_cards.py  slack.py
src/attune/cli/: __init__.py  autonomy_cmd.py  brief_cmd.py  doctor.py  google_setup_cmd.py  google_setup_state.py  init_cmd.py  (+6 more)
tests/: conftest.py  memory_quality_scenarios.json  test_app.py  test_audit.py  test_audit_client.py  test_audit_pipeline.py  test_autonomy.py  test_brief.py  test_calendar_state.py  test_calendar_sync.py  test_calendar_watch.py  test_capability_gateway.py  test_channel_broker.py  test_channel_broker_client.py  test_channel_broker_service.py  test_channel_setup_service.py  test_chat_events.py  test_chat_interactions.py  test_cli.py  test_config.py  test_connectors.py  test_content_retention.py  test_control_plane_brief.py  test_control_plane_model_profile.py  test_control_plane_service.py  test_control_plane_usage.py  test_control_plane_web_conversation.py  test_conversation.py  test_conversation_model_metering.py  test_credentials.py  test_customer_export_service.py  test_dispatch_broker.py  test_dispatch_broker_client.py  test_dispatch_broker_service.py  test_dispatch_smoke.py  test_dispatcher.py  test_docs.py  test_export_cleanup.py  test_export_download.py  test_followup.py  (+63 more)
(+133 files in other folders)
