[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attune"
version = "0.0.1"
description = "A self-learning workspace assistant over Gmail, Calendar, Google Chat, and Slack."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mumit" }]
keywords = ["assistant", "agent", "langgraph", "mem0", "workspace"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai>=1.30,<3",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "cryptography>=42,<50",
    "flask>=3.1,<4",
    "google-crc32c>=1.7,<2",
    "protobuf>=5,<8",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "langgraph>=0.2",
]
memory = ["mem0ai>=0.1", "qdrant-client>=1.9"]
orchestrator = ["langgraph>=0.2", "langgraph-checkpoint-sqlite>=2"]
slack = ["slack-bolt>=1.24"]
google = [
    "google-api-python-client>=2",
    "google-auth>=2",
    "google-auth-oauthlib>=1",
    "google-cloud-pubsub>=2",
]
mcp = ["mcp>=1.10,<2", "httpx>=0.27"]
hosted = [
    "cloud-sql-python-connector[pg8000]>=1.18,<2",
    "google-cloud-secret-manager>=2,<3",
    "psycopg[binary]>=3.2,<4",
]
hosted-service = [
    "cloud-sql-python-connector[pg8000]>=1.18,<2",
    "cryptography>=42,<50",
    "flask>=3.1,<4",
    "google-cloud-kms>=3,<4",
    "google-cloud-secret-manager>=2,<3",
    "google-cloud-tasks>=2,<3",
    "google-auth>=2,<3",
    "google-crc32c>=1.7,<2",
    "gunicorn>=23,<24",
    "requests>=2.32,<3",
]

[project.scripts]
attune = "attune.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/attune"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# deploy/ contains standalone services with independent dependencies.
norecursedirs = ["deploy"]
